src/ui/components/Views/NonDevView.css
.right-sidebar {
  background: var(--theme-body-background);
  display: flex;
  flex-direction: column;
  width: 100%;
}

.right-sidebar-toolbar {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 24px 24px 12px 24px;
  justify-content: space-between;
}

.right-sidebar-toolbar-item {
  font-size: 20px;
  font-weight: 600;
  color: var(--theme-body-color);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.right-sidebar .event-breakpoints button.expand-dropdown {
  padding: 4px;
  border-radius: 4px;
  cursor: pointer;
  border: none;
}

.right-sidebar .event-breakpoints button.expand-dropdown .img {
  background: var(--theme-comment);
}

.right-sidebar .event-breakpoints button.expand-dropdown:hover {
  background: var(--theme-toolbar-background-hover);
}

.right-sidebar .event-breakpoints .event-listeners {
  padding: 0px;
}

.right-sidebar .event-breakpoints .devtools-searchinput-clear {
  display: none;
}

.right-sidebar .event-listeners .event-listeners-content {
    height: 300px;
    overflow-y: auto;
}

.right-sidebar .comments-panel {
  flex-grow: 1;
}

.right-sidebar .toolbar-options {
  display: flex;
  flex-direction: row;
  cursor: pointer;
  overflow: hidden;
}

.right-sidebar .toolbar-options > :first-child {
  margin-right: 8px;
  cursor: pointer;
}

.right-sidebar .toolbar-options label {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

